<resources>
    <string name="app_name">VapeShop</string>
    <string name="sem_produtos">nenhum produto foi adicionado</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password(opcional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email invalido</string>
    <string name="error_invalid_password">Password demasiado curta</string>
    <string name="error_incorrect_password">Password Incorreta</string>
    <string name="error_field_required">Campo obrigatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btn_link_login">Already have an account?</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="vapeshop">VapeShop</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="liquids">Liquids</string>
    <string name="customizables">Customizables</string>
    <string name="most_recent">Most Recent</string>
    <string name="vapers">Vapers</string>
    <string name="preco">Preço:</string>
    <string name="descricao">Descrição:</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_home">Home</string>
    <string name="title_activity_vapers">Vapers</string>
    <string name="title_activity_liquids">E-liquids</string>
    <string name="title_activity_costumizables">Costumizables</string>
    <string name="title_activity_profile">Perfil de Utilizador</string>
    <string name="title_activity_product">Detalhe do Produto</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cart" />
    <string name="profile" />
    <string name="home" />
    <string name="nomeproduto">NomeProduto</string>
    <string name="descricao_do_prouto">Descricao do prouto</string>
    <string name="preco_do_produto">Preco do produto</string>
    <string name="adicionar_ao_carrinho">Adicionar ao carrinho</string>
    <string name="total_price">Preco Total</string>
    <string name="name">Nome</string>
    <string name="unit_price">Preco Unitário</string>
    <string name="quantity">Quantidade</string>
    <string name="price">Preco</string>
    <string name="clear_cart">Apagar Carrinho</string>
    <string name="shop">Loja</string><string name="shopping_cart">Shopping Cart</string>
    <string name="delete_item">Apagar Item</string>
    <string name="delete_item_message">Tem a certeza que deseja apagar este item?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="AdicionarProduto">Adicionar Produto</string>


</resources>
