<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuHome"
            android:checked="true"
            android:icon="@drawable/home"
            android:title="@string/home"
            android:visible="true" />

        <item
            android:id="@+id/menuProfile"
            android:icon="@drawable/profile"
            android:title="@string/profile"
            android:checked="true"
            android:visible="true"/>

        <item
            android:id="@+id/menuCart"
            android:icon="@drawable/cart"
            android:title="@string/cart"
            android:checked="true"
            android:visible="true"/>
    </group>
</menu>
