<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:text="@string/vapeshop"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="164dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/login" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:text="@string/register" />
</LinearLayout>